Combine css for login and signup, add background img

--- a/public/css/landing.css
+++ b/public/css/landing.css
@@ -15,6 +15,6 @@ div h3 {
 
 body {
   background-size: cover;
-  background: url('../svg/road_background.svg') center;
+  background: url('../svg/road_background.jpg') center;
   min-height: 100vh;
 }
