--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -1,3 +1,15 @@
 #map{
     height: 450px;
 }
+
+.container{
+    margin-top:3%;
+    color: white;
+    background: rgba(0,0,0,0.4);
+}
+
+body {
+    background-size:cover;
+    background: url('../svg/background.jpg') center;
+}
+
