--- a/public/css/myroutes.css
+++ b/public/css/myroutes.css
@@ -2,3 +2,8 @@
     margin-left: 10%;
     margin-right: 10%;
 }
+
+body {
+    background-size:cover;
+    background: url('../svg/background.jpg') center;
+}
