--- a/public/css/profile.css
+++ b/public/css/profile.css
@@ -3,3 +3,14 @@
     width: 200px;
     border-radius: 10px;
 }
+
+.profileHeader {
+    padding:20px;
+    background: rgba(0,0,0,0.4);
+    border-radius: 20px;
+    color: white;
+}
+
+body {
+    background: url('../svg/background.jpg') center;
+}
