create two route list for current user as a driver or as a passenger in 'my routes' page
driver list shows the routes that current user is the driver of the routes

passenger list shows the routes that current user is the passenger of the routes

--- a/public/css/myroutes.css
+++ b/public/css/myroutes.css
@@ -1,6 +1,16 @@
-#route_list{
+#left{
     margin-left: 10%;
     margin-right: 10%;
+    float:left;
+    width:75%;
+    overflow:hidden;
+}
+#right{
+    margin-left: 10%;
+    margin-right: 10%;
+    float:left;
+    width:25%;
+    overflow:hidden;
 }
 
 body {
