--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -3,7 +3,7 @@
 }
 
 .container{
-    margin-top:3%;
+    margin-top: 2%;
     color: white;
     background: rgba(0,0,0,0.4);
 }
@@ -14,3 +14,6 @@ body {
 
 }
 
+.alert {
+    margin-bottom: 5px !important;
+}
