--- a/public/css/myroutes.css
+++ b/public/css/myroutes.css
@@ -1,19 +1,31 @@
-#left{
+
+h1{
+    color: whitesmoke;
+}
+.left{
+
     margin-left: 10%;
     margin-right: 10%;
     float:left;
     width:75%;
     overflow:hidden;
 }
-#right{
+.right{
     margin-left: 10%;
     margin-right: 10%;
     float:left;
-    width:25%;
+    width:75%;
     overflow:hidden;
 }
 
 body {
     background-size:cover;
     background: url('../svg/background.jpg') center;
+}
+
+.container{
+    margin-top:3%;
+    padding:20px;
+    color: white;
+    background: rgba(0,0,0,0.4);
 }
