--- a/public/css/vehicle.css
+++ b/public/css/vehicle.css
@@ -3,10 +3,9 @@
     width: 200px;
     border-radius: 10px;
 }
-.vehiclePicture {
-    height: 200px;
-    width: 200px;
-    border-radius: 10px;
+
+.vehicleHeader {
+    max-width: 700px;
 }
 
 body {
@@ -15,8 +14,8 @@ body {
 }
 
 .container{
-    margin-top:3%;
-    padding:20px;
+    margin-top: 50px;
+    padding: 35px;
     color: white;
     background: rgba(0,0,0,0.4);
 }
