--- a/public/css/myroutes.css
+++ b/public/css/myroutes.css
@@ -1,31 +1,9 @@
-
-h1{
-    color: whitesmoke;
-}
-.left{
-
+#route_list{
     margin-left: 10%;
     margin-right: 10%;
-    float:left;
-    width:75%;
-    overflow:hidden;
-}
-.right{
-    margin-left: 10%;
-    margin-right: 10%;
-    float:left;
-    width:75%;
-    overflow:hidden;
 }
 
 body {
     background-size:cover;
     background: url('../svg/background.jpg') center;
-}
-
-.container{
-    margin-top:3%;
-    padding:20px;
-    color: white;
-    background: rgba(0,0,0,0.4);
 }
