--- a/public/css/admin-dashboard.css
+++ b/public/css/admin-dashboard.css
@@ -1,17 +1,20 @@
 body {
-    background-size:cover;
+    background-size: cover;
     background: url('../svg/admin-background.jpg') center;
-    text-align: center;
     min-height: 100vh;
-}
-
-.btn{
-    width: 100px;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .container {
-    background-color: rgba(255, 255, 255, 0.7);
-    text-align: center;
+    background-color: rgba(234, 235, 235, 0.7);
     padding: 10px 10px 10px 10px;
-    margin-top: 40vh;
+    margin-top: 8vh;
+    width: 280px;
+
 }
+
+h3 {
+    font-family: "Arial Black", Gadget, sans-serif;
+    margin: 0 0 0 0;
+}
+
