--- a/public/css/profile.css
+++ b/public/css/profile.css
@@ -25,3 +25,12 @@ body {
     color: white;
     background: rgba(0,0,0,0.4);
 }
+
+a {
+    color:white;
+    text-decoration: white underline;
+}
+
+a:hover{
+    color: black;
+}
