--- a/public/css/profile.css
+++ b/public/css/profile.css
@@ -26,11 +26,11 @@ body {
     background: rgba(0,0,0,0.4);
 }
 
-a {
+.whiteLink {
     color:white;
     text-decoration: white underline;
 }
 
-a:hover{
+.whiteLink:hover{
     color: black;
 }
