--- a/public/css/myroutes.css
+++ b/public/css/myroutes.css
@@ -4,16 +4,17 @@ h1{
 }
 .left{
 
-    margin-left: 10%;
-    margin-right: 5%;
-    float:left;
-    width: fit-content;
-    overflow:hidden;
-}
-.right{
+    margin-left: 15%;
 
     float:left;
-    width: fit-content;
+    width: 30%;
+    overflow:hidden;
+
+}
+.right{
+    margin-left: 10%;
+    float:left;
+    width: 30%;
     overflow:hidden;
 }
 
@@ -22,13 +23,15 @@ body {
     background: url('../svg/background.jpg') center;
 }
 
-.container{
-    margin-top:3%;
-    padding:20px;
-    color: white;
+.li {
+    color:whitesmoke;
     background: rgba(0,0,0,0.4);
 }
 .show {
     margin-left: 10%;
     margin-right: 10%;
+}
+.well {
+    color:whitesmoke;
+    background: rgba(0,0,0,0.4);
 }
